--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+/**
+  * Add your own styles to make this app beautiful
+  * Here are some tips for styling form elements:
+  * https://developer.mozilla.org/en-US/docs/Learn/Forms/Styling_web_forms
+  */
 body {
   margin: 0;
   padding-top: 150px;
